Changes for 4.0.6rc1

New features:
...G...... [ZBXNEXT-4898] added support IPv6 for "net.dns" and "net.dns.record" (MVekslers)
.......PS. [ZBXNEXT-5037] added "skip" parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
A.F....... [ZBX-15614] fixed validation of y axis item on classic graph create and update (agriscenko)
..F....... [ZBX-15226] fixed missing visual gap under page title (gcalenko)
..F....... [ZBX-15560] fixed incorrect URL argument formatting when parameters are non-indexed arrays (Ivo)
..F....... [ZBX-15719] fixed undefined index in trigger expression popup (Ivo)
..F....... [ZBX-15332] fixed dashboard svg graph update on timeselector interval change (gcalenko)
...G...... [ZBX-15728] fixed agent startup problem in Win 2008 R2 w/o SP1, removed dependency on version helper API (kalimulin)
..F....... [ZBX-15622] fixed trigger expression test dialog not being usable with long trigger expressions (talbergs)
..F....... [ZBX-13332] fixed issue for large post data in web scenario steps (talbergs)
...G...... [ZBX-15607] fixed possibility of zombie processes occurring when signaling agent during metric execution (akozlovs)
.D........ [ZBX-10496] fixed links to installation instructions in README file (dimir)
..F....... [ZBX-15625] removed links leading to media type edit form for non-superadmins in Reports->Notifications page (Ivo)
.......PS. [ZBX-15703] fixed use of uninitialized variable when receiving 0 bytes on listening socket (akozlovs)
..F....... [ZBX-15537] fixed visual bug when filter tab was overlapped by sub navigation (gcalenko)
..F....... [ZBX-15539] fixed validation of master item in item update form (miks)
..F....... [ZBX-15532] fixed undefined index error on problems page when trigger expression contains web items (gcalenko, Sasha)
A......... [ZBX-15488] fixed permission check for inherited triggers (miks)