@@ -1765,7 +1765,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'history' => ' ',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "history": a time unit is expected.'
+						'Incorrect value for field "history": a time unit is expected.'
 					]
 				]
 			],
@@ -1778,7 +1778,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'history' => 3599,
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-						'Incorrect value for field "history": must be between "3600" and "788400000".'
+						'Incorrect value for field "history": value must be one of 0, 3600-788400000.'
 					]
 				]
 			],
@@ -1791,7 +1791,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'history' => 788400001,
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-						'Incorrect value for field "history": must be between "3600" and "788400000".'
+						'Incorrect value for field "history": value must be one of 0, 3600-788400000.'
 					]
 				]
 			],
@@ -1804,7 +1804,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'history' => '-1',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "history": a time unit is expected.'
+						'Incorrect value for field "history": a time unit is expected.'
 					]
 				]
 			],
@@ -1817,7 +1817,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'trends' => ' ',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "trends": a time unit is expected.'
+						'Incorrect value for field "trends": a time unit is expected.'
 					]
 				]
 			],
@@ -1830,7 +1830,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'trends' => '-1',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "trends": a time unit is expected.'
+						'Incorrect value for field "trends": a time unit is expected.'
 					]
 				]
 			],
@@ -1840,10 +1840,10 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'expected' => TEST_BAD,
 					'name' => 'Item trends',
 					'key' => 'item-trends-test',
-					'trends' => 3599,
+					'trends' => 86399,
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "trends": must be between "86400" and "788400000".'
+						'Incorrect value for field "trends": value must be one of 0, 86400-788400000.'
 					]
 				]
 			],
@@ -1856,7 +1856,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'trends' => 788400001,
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Incorrect value for field "trends": must be between "86400" and "788400000".'
+						'Incorrect value for field "trends": value must be one of 0, 86400-788400000.'
 					]
 				]
 			],
@@ -2129,7 +2129,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'key' => 'item-ipmi-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "IPMI sensor": cannot be empty.'
+						'Incorrect value for field "IPMI sensor": cannot be empty.'
 					]
 				]
 			],
@@ -2141,8 +2141,8 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'key' => 'item-ssh-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "User name": cannot be empty.',
-							'Incorrect value for field "Executed script": cannot be empty.'
+						'Incorrect value for field "User name": cannot be empty.',
+						'Incorrect value for field "Executed script": cannot be empty.'
 					]
 				]
 			],
@@ -2154,8 +2154,8 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'key' => 'item-telnet-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "User name": cannot be empty.',
-							'Incorrect value for field "Executed script": cannot be empty.'
+						'Incorrect value for field "User name": cannot be empty.',
+						'Incorrect value for field "Executed script": cannot be empty.'
 					]
 				]
 			],
@@ -2190,7 +2190,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'key' => 'item-calculated',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "Formula": cannot be empty.'
+						'Incorrect value for field "Formula": cannot be empty.'
 					]
 				]
 			],
@@ -2202,7 +2202,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'name' => 'Database monitor',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "SQL query": cannot be empty.'
+						'Incorrect value for field "SQL query": cannot be empty.'
 					]
 				]
 			],
@@ -2215,7 +2215,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'params_ap' => 'SELECT * FROM items',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2229,7 +2229,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'params_es' => 'script to be executed',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2243,7 +2243,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'params_es' => 'script to be executed',
 					'error_msg' => 'Cannot add item prototype',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2256,7 +2256,7 @@ class testFormItemPrototype extends CLegacyWebTest {
 					'username' => 'zabbix',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "Key": cannot be empty.'
+						'Incorrect value for field "Key": cannot be empty.'
 					]
 				]
 			]
